--- a/question2.build_log.htm
+++ b/question2.build_log.htm
@@ -12,3 +12,6 @@ assembling question2.s...
 linking...
 Program Size: Code=160 RO-data=0 RW-data=0 ZI-data=0  
 ".\question2.axf" - 0 Error(s), 0 Warning(s).
+</pre>
+</body>
+</html>
